# prOG

./: README.md  rag_store.json  tz.md  user_memory.json
chat_engine/: README.md  __init__.py  pyproject.toml
chat_engine/adapters/: __init__.py  augment_noop.py  chunker_token.py  embed_hash.py  embed_sbert.py  llm_mock.py  llm_ollama.py  loader_pdf_pypdf.py  loader_txt.py  memory_augmentor.py  memory_extractor_rules.py  memory_store_json.py  rag_augmentor.py  repo_json.py  summarizer_llm.py  summarizer_mock.py  tokens_approx.py  tokens_tiktoken.py  trunc_recency.py  vector_store_json.py
chat_engine/app/: api.py  cli.py  settings.py  wiring.py
chat_engine/domain/: __init__.py  memory_models.py  models.py  rag_models.py
chat_engine/ports/: __init__.py  augment.py  chunker.py  embeddings.py  llm.py  loaders.py  memory_extractor.py  memory_store.py  repo.py  summarizer.py  tokens.py  truncation.py  vector_store.py
chat_engine/tests/: __init__.py  test_budget.py  test_engine_mock.py  test_memory.py  test_rag.py  test_summarization.py  test_truncation.py
chat_engine/use_cases/: __init__.py  budget.py  chat_engine.py  memory_manager.py  rag_indexer.py  summary_buffer.py
data/: demo.json  demo0.json  demo1.json  demo2.json  demo_auto.json  demo_auto2.json  demo_auto3.json  demo_cli.json  demo_rag.json  demo_rag2.json  demo_rag3.json  demo_rag_meta.json
docs/: guide.txt
