[project]
name = "chat-engine-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "pydantic>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
pdf = ["pypdf>=4.0.0"]
tiktoken = ["tiktoken>=0.6.0"]
sbert = ["sentence-transformers>=2.6.0"]

[tool.pytest.ini_options]
testpaths = ["chat_engine/tests"]
pythonpath = ["."]
