[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-engine-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chat_engine*"]

[tool.pytest.ini_options]
testpaths = ["chat_engine/tests"]
addopts = ["-q", "--import-mode=prepend"]
